Simply refactor